--- a/config/keyball39.conf
+++ b/config/keyball39.conf
@@ -18,5 +18,5 @@ CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
 
-+CONFIG_ZMK_STUDIO=y
-+CONFIG_ZMK_STUDIO_LOCKING=n 
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n 
